feat: add AppFooter component

--- a/src/style.scss
+++ b/src/style.scss
@@ -30,8 +30,12 @@
   margin-right: auto;
 }
 
-/* /Assets */
-
 ul {
   list-style-type: none;
 }
+
+.btn {
+  font-family: "Oswald";
+}
+
+/* /Assets */
